# SD403_TrailCamera_NDSU

./: .gitattributes  .gitmodules  CLAUDE.md  README.md
Documentation/: TPD.md  toolchain_versions.txt
Documentation/SDDs/: SDD000.md  SDD003.md
Documentation/issues/: WHT_compression.md  power_switching.md  psram_framebuffer.md
Doumentation/BOM/: BOM000.md
ESP_Ecosystem/: .clang-format  .gitignore  \  format_all.sh  pin_allocation.md
ESP_Ecosystem/esp32_devkitv1/: .clangd
ESP_Ecosystem/esp32_devkitv1/main/: CMakeLists.txt
ESP_Ecosystem/esp32_devkitv1/main/inc/: config.h  fpga_spi.h  image_processor.h  lora_bench.h
ESP_Ecosystem/esp32_devkitv1/main/inc/peripherals/: aht20.h  fpga_gpio.h  i2c_bus.h  motor_i2c.h  pir.h  rtc.h
ESP_Ecosystem/esp32_devkitv1/main/src/: main.c  sensors_temp_humidity.c
ESP_Ecosystem/esp32_devkitv1/main/src/interprocessor/: fpga_spi.c  i2c_bus.c  lora_bench.c  lora_uart.c
ESP_Ecosystem/esp32_devkitv1/main/src/peripherals/: aht20.c  motor.c  motor_i2c.c  pir.c  rtc.c  sensors_temp_humidity.c
ESP_Ecosystem/esp32_devkitv1/main/src/utilities/: image_processor.c  isr.c  utils.c
ESP_Ecosystem/esp32cam/main/: CMakeLists.txt
ESP_Ecosystem/esp32s3_wroom/: CMakeLists.txt  error.txt  sdkconfigP_TASK_WDT_CHECK_IDLE_TASK_CPU0(=y) "Watch CPU0 Idle Task"  todo.md
FPGA_Unit/: Makefile  build.tcl  build_apicula.sh  build_verilog.sh  camera_programmer.v  fpga_out.fs  fpga_out.json  fpga_out_pnr.json  pins.cst  power_monitor.v  readme.md  tang_nano_9k.cst  top.v  top.vhd
FPGA_Unit/Constraints/: tang_nano_9k.cst
SD403_FA25_06_TRAILCAMIV_/: FPGA_WIRING_GUIDE.md
Scripts/: check_pin_conflicts.sh  find_pins.sh  pin_report.sh  repo_to_pdf.py
esp/esp32s3_wroom/main/: CMakeLists.txt
esp/esp32s3_wroom/main/inc/: config.h  lora_bench.h  ws_server.h
esp/esp32s3_wroom/main/src/: lora_bench.c  wifi_ap.c
issues/: gpio_expander.md
sim/: dc_mode_visual.py  gaussian_blur.py  lossy_compression.py  test201_diff.py  wht_sim.py
spt/: deps.txt  lookup_pin.sh  pin_allocation.md  pin_report.sh
(+406 files in other folders)
